style.css
* {
  margin: 0;
  padding: 0;
}

body {
  width: 100%;
  height: auto;
}

.container {
  width: 100vw;
  height: 820px;
  display: flex;
  flex-direction: column;
  align-items: center;
  background-image: url(images/header-illsutration-mobile.svg);
  background-size: 100%;
  background-repeat: no-repeat;
  background-position: 1.2vw 11vh;
}

.toolbar-container {
  margin-top: 44px;
  width: 100%;
  max-width: 100%;
  height: 48px;
}

.toolbar-icon {
  display: flex;
  justify-content: flex-end;
  height: 40px;
  border-radius: 8px;
  width: 90%;
  margin: 0 auto;
}

.toolbar-container .toolbar-icon li {
  list-style: none;
}

.toolbar-container .toolbar-icon a {
  display: none;
}

.toolbar-container .toolbar-icon img {
  width: 40px;
  height: auto;
  align-self: flex-start;
}

.headline {
  display: flex;
  flex-direction: column;
  max-width: 168.1013333333333%;
  height: 520px;
}

.greeting {
  margin: 64px 27px 0 27px;
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 700;
  font-size: 40px;
  line-height: 52px;
  text-align: center;
  color: #172b4d;
}

.heading,
h1,
h2,
h3,
h4 {
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 700;
  font-size: 40px;
  line-height: 52px;
  color: #172b4d;
  text-align: center;
}

.greeting span {
  color: #36b37e;
}

.article p {
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 20px;
  line-height: 28px;
  text-align: center;
  color: #172b4d;
  margin: 15px 27px;
}

#social-desktop {
  display: none;
}

.social-media-icon-container {
  width: 100%;
  height: 48px;
  margin-bottom: 13px;
}

.social-media-icon-box {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 45.379%;
  height: 19.62px;
  margin-top: 24.85px;
  margin-left: 28%;
}

.social-media-icon-container .social-media-icon-box li {
  list-style: none;
}

.social-media-icon {
  margin-right: 20px;
}

.social-media-icon:active {
  transform: scale3d(0.8, 0.8, 0.8);
}

.downarrow-container {
  margin-top: 65px;
}

.work-container {
  margin-left: 6.93%;
  margin-right: 7.46667%;
}

.work-title {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.work-container .work-title img {
  width: 12.8%;
  padding-top: 6.4%;
}

.my-projects {
  margin-top: 16.53%;
  display: grid;
  grid-template-columns: auto;
  grid-template-rows: repeat(6, 480px);
  row-gap: 24px;
}

.work-cards {
  border-radius: 8px;
  border: 1px solid #d0d9d4;
  background-color: #ebf0ee;
  display: flex;
}

.work-desc {
  background-color: white;
  border-radius: 8px;
  width: 100%;
  height: 224px;
  align-self: flex-end;
}

.work-desc .languages {
  display: flex;
  justify-content: space-between;
}

.work-cards .work-desc p {
  margin: 16px;
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 600;
  font-size: 24px;
  line-height: 32px;
  text-align: center;
  color: #3a4a42;
}

.work-desc .languages li {
  list-style: none;
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 600;
  font-size: 12px;
  line-height: 16px;
  padding: 8px 12px;
  background-color: #ebf0ee;
  letter-spacing: 0.03em;
  border-radius: 4px;
  color: #3a4a42;
}

.button-container {
  display: flex;
  justify-content: center;
  margin-top: 29px;
}

.button-container button {
  padding: 12px;
  border: none;
  color: #fff;
  background-color: #36b37f;
  border-radius: 4px;
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 17px;
  text-align: center;
}

#button:hover {
  background-color: #2aaf78;
  box-shadow: 0 3px 5px #18724d;
}

#button:active {
  background-color: #1f9865;
  box-shadow: 0 3px 5px #18724d;
  transform: translateY(4px);
}

.contact-bg .contact-me-container .type-in button {
  width: 130px;
  height: 48px;
  background: #36b37f;
  border-radius: 4px;
  border: none;
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 17px;
  line-height: 24px;
  color: #fff;
  margin-bottom: 35px;
}

.about-me-container {
  background-image: url(images/illustration\ 1-\ about\ me-mobile.svg), url(images/illustration\ 2-about\ me\ mobile.svg);
  background-size: 18.13%, 17.9%;
  padding-top: 68px;
  background-repeat: no-repeat, no-repeat;
  background-position: 100% 7%, left bottom;
}

.about-me-container .article {
  margin-top: 24px;
}

.skills-container-grid {
  max-width: 100%;
  display: grid;
  grid-template-rows: repeat(3, 316px);
  grid-template-columns: 100%;
  row-gap: 24px;
  margin: 59px 24px 0 24px;
}

.skills-container-each {
  border-radius: 8px;
  background-color: #ebf0ee;
  border: 1px solid #c1c7d0;
}

.skill-icon {
  margin-top: 23px;
  display: flex;
  justify-content: center;
}

.skills-container-grid .skills-container-each p {
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 600;
  font-size: 24px;
  line-height: 32px;
  color: #344563;
  text-align: center;
}

.skills-container-each .skills {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
  margin: 24px 17px;
}

.skills-container-each .skills li {
  padding: 12px;
  background-color: #fff;
  list-style: none;
  border-radius: 8px;
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 600;
  font-size: 12px;
  line-height: 16px;
  color: #36b37e;
  margin-right: 8px;
  margin-bottom: 8px;
}

.contact-bg {
  width: 100%;
  height: auto;
  background-image: url(images/illustration-contact-form.svg);
  background-size: auto;
  background-repeat: no-repeat;
  background-position: 100% 95%;
}

.black-bar {
  display: flex;
  justify-content: center;
  margin-bottom: 5px;
}

.contact-me-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: 50px 24px 0 24px;
}

.cm-heading {
  margin-bottom: 58px;
}

.contact-me-container .type-in {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
}

.form-container {
  width: 100%;
}

.contact-me-container .type-in #name,
#email {
  width: 100%;
  height: 48px;
  box-sizing: border-box;
  border: 1px solid #d0d9d4;
  border-radius: 4px;
  margin-bottom: 26px;
  padding: 15px 16px;
}

#name::placeholder,
#email::placeholder {
  font-family: 'Inter', sans-serif;
  font-style: italic;
  font-weight: 400;
  font-size: 15px;
  line-height: 24px;
  color: #6b778c;
}

.contact-me-container .type-in textarea {
  width: 100%;
  box-sizing: border-box;
  border: 1px solid #60c095;
  border-radius: 4px;
  margin-bottom: 26px;
  padding: 12px;
}

.contact-me-container .type-in textarea::placeholder {
  color: #42526e;
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 15px;
  line-height: 24px;
}

.contact-me-container .type-in p {
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 20px;
  line-height: 32px;
  text-align: center;
  color: #42526e;
  margin-bottom: 15px;
}

@media screen and (min-width: 768px) {
  #social-desktop {
    display: block;
  }

  #social-mobile {
    display: none;
  }

  .container {
    height: 1140px;
    background-image: url(images/Header-llustration-desktop.svg);
    background-size: 100%;
    background-repeat: no-repeat;
    background-position: 0.2vw 0%;
  }

  .toolbar-icon {
    justify-content: center;
    align-items: center;
    width: 20%;
  }

  .toolbar-container .toolbar-icon a {
    display: block;
    text-decoration: none;
    font-family: 'Inter', sans-serif;
    font-weight: 700;
    color: #505f79;
    margin-left: 40px;
  }

  .toolbar-container .toolbar-icon img {
    display: none;
  }

  .greeting {
    margin-top: 150px;
  }

  .greeting .heading {
    font-size: 48px;
    line-height: 60px;
  }

  .headline .article {
    width: 50vw;
    margin: 20px auto;
  }

  .headline .article p {
    text-align: center;
    line-height: 32px;
    margin: 0;
  }

  .downarrow-container {
    margin-top: 15px;
  }

  .work-container .work-title img {
    display: none;
  }

  .work-container {
    margin: 0 9.9vw;
  }

  .my-projects {
    margin-top: 52px;
    display: grid;
    grid-template-columns: repeat(3, 33%);
    grid-template-rows: repeat(2, 474px);
    gap: 32px 24px;
  }

  .about-me-container {
    max-width: 100%;
    height: 300px;
    margin-top: 150px;
    background-image: url(images/illustration-about\ me-1-desktop.svg), url(images/illustration-about-me-2-desktop.svg);
    background-size: 15%, 16%;
    background-position: 100.5% -20%, 0% 65%;
  }

  .about-me-container .article {
    width: 65vw;
    margin: 0 auto;
  }

  .skills-container-grid {
    display: grid;
    grid-template-rows: auto;
    grid-template-columns: repeat(3, 33%);
    column-gap: 24px;
    width: 80vw;
    margin: 60.95px auto 0 auto;
  }

  .contact-bg {
    background-image: url(images/illustration-1-contact-form-desktop.svg), url(images/illustration-2-contact-form-desktop.svg), url(images/contact\ form-illustratoin-3-desktop.svg);
    background-size: auto;
    background-repeat: no-repeat;
    background-position: 0% 90%, 25% 82%, 100% 75%;
  }

  .contact-me-container {
    margin: 0 auto;
    height: 665px;
    width: 80vw;
    display: grid;
    grid-template-columns: 40% 60%;
    grid-template-rows: auto;
  }

  .black-bar {
    display: none;
  }

  .cm-heading h4 {
    font-size: 30px;
    word-spacing: normal;
    text-align: left;
    word-wrap: normal;
  }

  .form-container .type-in p {
    display: none;
  }

  .form-container {
    margin-left: 50px;
    width: 95%;
  }

  .contact-me-container .type-in {
    align-items: flex-start;
  }

  .contact-bg .social-media-icon-container {
    border-top: #dfe1e6 solid 1px;
  }

  .contact-bg .social-media-icon-box {
    margin-top: 25px;
  }
}

